packages/typ/tests/fixtures/diagnostics/0100_core_annotated_value_mismatch_09.ml.expected
File "0100_core_annotated_value_mismatch_09.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0100_core_annotated_value_mismatch_09 is not a valid module name.

File "0100_core_annotated_value_mismatch_09.ml", line 1, characters 17-22:
1 | let iota : int = false
                     ^^^^^
Error: This expression should not be a boolean literal, the expected type is
       int
